--- a/config/clustertasks/kustomize-namespace.yaml
+++ b/config/clustertasks/kustomize-namespace.yaml
@@ -18,7 +18,7 @@ spec:
       image: quay.io/konveyor/crane-runner:latest
       script: |
         # Make common base directory
-        kustomize_base_dir="$(workspaces.kustomize.path)/base"
+        kustomize_base_dir="$(workspaces.kustomize.path)/$(params.dest-namespace)/base"
         mkdir -p ${kustomize_base_dir}
 
         # Fill in base kustomization.yaml
